--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<style> /*not sure why I couldn't add this tag to the external stylesheet*/
 
 	html { 
-	  background: url(images/notebook.png) no-repeat center center fixed; 
+	  background: url(notebook.png) no-repeat center center fixed; 
 	  -webkit-background-size: cover;
 	  -moz-background-size: cover;
 	  -o-background-size: cover;
@@ -42,7 +42,7 @@
 
 		<!--start 1st blog-->
 			<h2 class="surf">Learn to Surf</h2>
-			<img src="images/surfing.jpg" alt="surfing">
+			<img src="surfing.jpg" alt="surfing">
 			<p class="imagecaption">This april I will travel to the Caribbean and take surfing lessons.</p>
 			<hr>
 			<p class="imagecredits">My April Resolution by Chris Castiglione</p>
@@ -50,7 +50,7 @@
 
 		<!--start 2nd blog-->
 			<h2 class="read">Read Everyday</h2>
-			<img src="images/book.jpg" alt="open book">
+			<img src="book.jpg" alt="open book">
 			<p class="imagecaption">This month I will read at least 50 pages everyday. Including weekends.</p>
 			<hr>
 			<p class="imagecredits">My March Resolution by Chris Castiglione</p>
@@ -58,7 +58,7 @@
 
 		<!--start 3rd blog-->
 			<h2 class="meditate">Meditate</h2>
-			<img src="images/meditate-girl.jpg" alt="girl meditating">
+			<img src="meditate-girl.jpg" alt="girl meditating">
 			<p class="imagecaption">I will take a meditation class and practice meditating at least 20 minutes everyday for the month. Hopefully I won't fall asleep every time I meditate.</p>
 			<hr>
 			<p class="imagecredits">My February Resolution by Chris Castiglione</p>
@@ -71,7 +71,7 @@
 		<!--start sidebar-->
 
 		<div id = "sidebar">
-			<img src="images/chris-castiglione.jpg">
+			<img src="chris-castiglione.jpg">
 			<p class="chrisimageheader"> This blog was made by Chris Castiglione</p>
 			<p class="followme"> Follow Me</p>
 			<ul>
