--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta name="author" content="Luciana Morais - One Month - Monthly Blog Project">
 		<title>Monthly Resolutions by Luciana Morais</title>
 		<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" href="css/normalize.css">
-		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="normalize.css">
+		<link rel="stylesheet" href="style.css">
 
 	<style> /*not sure why I couldn't add this tag to the external stylesheet*/
 
